# Control_DC_motor_PID

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main.uf2  pico-motor-control-usb.code-workspace
Firmware/: main.dis  main.elf  main.elf.map  main.hex
Firmware/elf2uf2/: CMakeCache.txt  cmake_install.cmake
Firmware/elf2uf2/boot_uf2_headers/: Makefile
Firmware/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
Firmware/pico-sdk/src/: Makefile  cmake_install.cmake
Firmware/pico-sdk/src/common/: Makefile  cmake_install.cmake
Firmware/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
Firmware/pico-sdk/tools/: Makefile
Firmware/pioasm/: CMakeCache.txt  cmake_install.cmake
Software_giao_dien/SW/: pico.sln
Software_giao_dien/SW/pico/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  pico.csproj
Software_giao_dien/SW/pico/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
elf2uf2/: Makefile
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile
pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/tools/: cmake_install.cmake
pioasm/: Makefile
pioasm/tmp/: PioasmBuild-mkdirs.cmake
(+118 files in other folders)
